Input - fix slot[min] not showing release date
css - extra hint for clickability on dt

--- a/htdocs/s/my.css
+++ b/htdocs/s/my.css
@@ -420,7 +420,7 @@ dt:target + dd
 	box-shadow: 0 0 30px #ffe958;
 }
 
-dt:target:before
+dt:target:before, dt[id]:hover:before
 {
 	content: '\00BB\0020';
 }
